# django_assignment_Day4

./: .python-version  db.sqlite3  pyproject.toml
blog/: admin.py  cb_views.py  fbv_urls.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_blog_author.py  0003_rename_created_blog_created_at.py
blog/templates/blog/: blog_list.html
blog/utils/: models.py
config/: settings.py  urls.py
member/: views.py
templates/: about.html  base.html  blog_create.html  blog_detail.html  blog_form.html  blog_list.html  blog_update.html  form-js.html
templates/registration/: login.html  signup.html
users/: admin.py  models.py  views.py
users/migrations/: 0001_initial.py
