[tool.poetry]
name = "oz-blog"
version = "0.1.0"
description = ""
authors = ["Kimmyeonghyeon0 <Kimmyeonghyeom0>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "5.0.4"
ipython = "^8.29.0"
django-extensions = "^3.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
